<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".view.RegisterActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line1_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@id/line1_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line2_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"/>
    <ImageView
        android:id="@+id/useLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/foody_logo"
        app:layout_constraintTop_toBottomOf="@+id/line1_horizontal"
        app:layout_constraintBottom_toTopOf="@id/line2_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/txtNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:hint="@string/name_register"
        android:textColor="@color/txt_color_white"
        android:textColorHint="@color/txt_color_white"
        android:inputType="textPersonName"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2_horizontal">

    </EditText>

    <EditText
        android:id="@+id/txtEmailRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        android:drawingCacheQuality="high"

        android:hint="@string/email"
        android:inputType="text"
        android:outlineProvider="none"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/txt_color_white"
        android:textColorHint="@color/txt_color_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNameRegister" />


    <EditText
        android:id="@+id/txtPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/txt_color_white"
        android:textColorHint="@color/txt_color_white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEmailRegister" >

    </EditText>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/main_color_bg"
        android:minWidth="160dp"
        android:padding="15dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordRegister" />

    <TextView
        android:id="@+id/txtGotoLogin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/txt_color_white"
        android:text="@string/goto_login"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>