<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".view.LoginActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line1_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@id/line1_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line2_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"/>

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onClickBack"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Đăng nhập hoặc Đăng ký"
        android:textSize="18sp"
        android:textColor="@color/txt_color_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line1_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/line2_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1_horizontal"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#459F49"
            android:fontFamily="sans-serif"
            android:text="Đăng nhập với Số điện thoại"
            android:textAllCaps="false"
            android:typeface="normal"
            app:icon="@drawable/ic_baseline_phone_android_24" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#3F51B5"
            android:fontFamily="sans-serif"
            android:text="Đăng nhập với Facebook"
            android:textAllCaps="false"
            android:typeface="normal"
            app:icon="@drawable/ic_facebook_icon" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#C6392F"
            android:fontFamily="sans-serif"
            android:text="Đăng nhập với Google"
            android:textAllCaps="false"
            android:typeface="normal"
            app:icon="@drawable/ic_google_icon" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line2_horizontal"
        android:text="Hoặc đăng nhập bằng tài khoản của bạn"
        android:textColor="@color/txt_color_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/txtEmailLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        android:drawingCacheQuality="high"

        android:hint="@string/email"
        android:inputType="text"
        android:outlineProvider="none"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/txt_color_white"
        android:textColorHint="@color/txt_color_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2_horizontal" />


    <EditText
        android:id="@+id/txtPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/txt_color_white"
        android:textColorHint="@color/txt_color_white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEmailLogin" >

    </EditText>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/main_color_bg"
        android:minWidth="160dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordLogin" />

    <Button
        android:id="@+id/btnGoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/white"
        android:minWidth="160dp"
        android:shadowColor="@color/black"
        android:text="@string/register"
        android:onClick="onClickGoToRegister"
        android:textColor="@color/txt_color"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:strokeColor="#ccc"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/txt_send_mail_to_activate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/send_code_to_activate"
        android:textColor="@color/txt_color_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/line1_vertical"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToRegister" />

    <TextView
        android:id="@+id/txt_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forget_password"
        android:textColor="@color/txt_color_white"
        app:layout_constraintLeft_toRightOf="@id/line1_vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToRegister" />
    <TextView
        android:id="@+id/tvPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/txt_color_white"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="Chúng tôi sẽ không sử dụng thông tin của bạn dưới bất kỳ mục đích nào khác
                    \nBằng cách đăng nhập hoặc đăng ký, bạn đồng ý với Chính sách quy định của Foody"
        app:layout_constraintTop_toBottomOf="@id/txt_forget_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>